# useful_script

./: .clang-format  .gitignore  .vimrc  GccInstrumentFunction.md  README.md  WeiXinAPI.md  bootstrap.sh  cargo.md  cmake.sh  cmake_libaray_sample.txt  css-selector-cheatseet.md  css-selector.md  curl.md  experienc.txt  fedora-25.firewall  fput  git.md  gnew.sh  go-package.md  https-and-golang.md  jquery-ajax.md  kemu.sh  kq  learn-golang.md  mput  mra.sh  rust_futures.md  rust_resource.md  sget  site.md  sput  svn.go  tensor.md  tensorboard.py  useful_css_selector.md  useful_java_library.md  useful_sql.sh  valgrind.md  vue.js.md  wangzhan.md  (+3 more)
algorithm/: bigO.md  help.md
awk/: basic.sh  begin.sh  field.sh  field_sep.sh  filter.sh  fruits.txt  paths.txt  poem.txt  print.sh  regexp.sh
bashrc/: .bashrc  .clang-format  .dircolors  .vimrc  shell.md
bcmsdk/: CAP.md  bcmsdk.md  bcmshell.md  cm.md  exhaust.cint  extend.md  forwarding.md  fp.md  gport.md  important.md  lpm_scahling.md  pipline.md  table.md
c/: nt.c  readline.c
curl/: github.md
golang/: anonymous.go  another-context.md  base64.go  basic_template.go  binary.go  context.go  context.md  empty_struct_imp.go  error-handling-in-go.md  external_template.go  filepath.go  filetype.go  go-debug.go  go-md5.go  go-package.md  go-redis.go  go-sha1.go  go-sha2.go  go-sha512.go  go-tool.sh  go-tricks.md  go_rpc.md  go_rpc_client.md  handlerfunction.go  http-trace.go  httpprof.go  interface.go  interface1.go  logrus.go  mail.go  mock.go  proxy.go  (+17 more)
pppp/src/: CMakeLists.txt  dlist.c  dlist.h  list.c  list.h  pppp.c  pppp.h  util.h  vector.c  vector.h
pppp/test/: CMakeLists.txt  ppppTest.c
(+2651 files in other folders)
