AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} LIB_SRC)
ADD_LIBRARY(kkkmmu SHARED ${LIB_SRC})
ADD_LIBRARY(kkkmmu_static STATIC ${LIB_SRC})
SET(CMAKE_C_FLAGS "-Wall -Werror -g -pg -finstrument-functions -ftest-coverage -fprofile-arcs -funwind-tables -rdynamic")
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
SET_TARGET_PROPERTIES (kkkmmu_static PROPERTIES OUTPUT_NAME kkkmmu)
SET_TARGET_PROPERTIES (kkkmmu PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES (kkkmmu PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES (kkkmmu PROPERTIES VERSION 1.1 SOVERSION 1)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src ${PROJECT_SOURCE_DIR}/lib/llog/src ${PROJECT_SOURCE_DIR}/lib/libfault ${PROJECT_SOURCE_DIR}/lib/libran/src)
# install (TARGETS pppp pppp_static 
#     LIBRARY DESTINATION ${PROJECT_BINARY_DIR}/lib
#     ARCHIVE DESTINATION ${PROJECT_BINARY_DIR}/lib)
INSTALL (FILES pppp.h DESTINATION ${PROJECT_BINARY_DIR}/include/pppp)
